terraform-project-dev/modules/security_group/main.tf
resource "aws_security_group" "dev_sg" {
  name        = "dev_sg"
  description = "Security group for the Dev instance"
  vpc_id      = var.vpc_id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name        = "Dev-SG"
    Environment = "Development"
  }
}
